--- a/src/app/HiringManagement/offerletter-exe/offerletter-exe.component.html
+++ b/src/app/HiringManagement/offerletter-exe/offerletter-exe.component.html
@@ -149,12 +149,12 @@
                                                                 <td class="fw-semibold fs-14 text-black">:</td>
                                                                 <td class="fw-semibold fs-14 text-black">AED 00.00/month</td>
                                                             </tr> -->
-                                                        </tbody>
+                                                        </tbody> 
                                                         <tfoot class="font-type">
                                                             <tr>
                                                                 <td class="fw-semibold fs-14 text-blue">Total</td>
                                                                 <td class="fw-semibold fs-14 text-blue">:</td>
-                                                                <td class="fw-semibold fs-14 text-blue">AED 00.00/month</td>
+                                                                <td class="fw-semibold fs-14 text-blue">AED {{this.salarydtls[0].GROSS_SALARY}} /month</td>
                                                             </tr>
                                                         </tfoot>
                                                     </table>
