--- a/src/app/PerformanceManagement/goal-setting-nanalytics-hr/goal-setting-nanalytics-hr.component.html
+++ b/src/app/PerformanceManagement/goal-setting-nanalytics-hr/goal-setting-nanalytics-hr.component.html
@@ -466,7 +466,7 @@
                                             <td style="white-space: pre-wrap;">{{item.REVIEWER}}</td>
                                             <td>{{item.TARGET_DATE | date:"dd-MM-yyyy"}}</td>
                                             <td>
-                                                <span class="badge bg-light text-body fs-13 fw-medium">{{item.REQUEST_STATUS}}</span>
+                                                <span class="badge bg-light text-body fs-13 fw-medium">{{item.SCORE}}</span>
                                             </td>
                                             <td>
                                                 <ul class="list-inline hstack gap-1 mb-0">
