--- a/src/app/payroll/salary-details/salary-details.component.html
+++ b/src/app/payroll/salary-details/salary-details.component.html
@@ -126,6 +126,7 @@
                                                                     <td  class="linehtsty" style="text-align: right;">{{salarydet.AMOUNT}}</td>
                                                                     <td></td>
                                                                 </tr>
+                                                                <tr style="background-color: darkgrey;font-weight: 600;"><td></td><td>GROSS SALARY</td><td style="text-align: right;">{{this.salarydetails[0].GROSS_SALARY}}</td><td></td></tr>
                                                             </tbody>
                                                         </table>
 
