--- a/src/app/HiringManagement/offerletter-int/offerletter-int.component.html
+++ b/src/app/HiringManagement/offerletter-int/offerletter-int.component.html
@@ -155,7 +155,7 @@
                                                             <tr>
                                                                 <td class="fw-semibold fs-14 text-blue">Total</td>
                                                                 <td class="fw-semibold fs-14 text-blue">:</td>
-                                                                <td class="fw-semibold fs-14 text-blue">AED 00.00/month</td>
+                                                                <td class="fw-semibold fs-14 text-blue">AED {{this.salarydtls[0].GROSS_SALARY}} /month</td>
                                                             </tr>
                                                         </tfoot>
                                                     </table>
