--- a/src/app/OffBoarding/experience-letter/experience-letter.component.html
+++ b/src/app/OffBoarding/experience-letter/experience-letter.component.html
@@ -85,10 +85,17 @@
                                 </div>
                             </div>
 
-                            <div class="row ma-10">
+                            <div class="row">
                                 <div class="col-lg-12 col-md-12">
                                     <div class="p-2">
-                                        <hr style="width:30%;text-align:left;margin-left:0">
+                                        <img src="assets/styles/img/e-signature Merlin.png" alt=""  class="img-size-sign">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-12 col-md-12">
+                                    <div class="p-2">
                                         <h6 class="fs-13 font-type fw-semibold">MERLIN VATHANA</h6>
                                         <h6 class="fs-13 font-type">HR Manager</h6>
                                     </div>
