--- a/src/app/PerformanceManagement/performance-management/performance-management.component.html
+++ b/src/app/PerformanceManagement/performance-management/performance-management.component.html
@@ -109,7 +109,7 @@
                                                                         <h6 class="fs-12 font-type">Review Status
                                                                             <span class="ms-1">:</span>
                                                                             <span class="badge bg-info-subtle text-info text-uppercase fs-11 ms-1 mb-1">{{item.STATUS_VAL}}</span>
-                                                                            <button *ngIf="item.REQUEST_STATUS == 10" type="button" class="btn btn-success btn-sm ms-1 fs-12">Appraisal Form</button>
+                                                                            <a *ngIf="item.REQUEST_STATUS == 10" class="btn btn-success btn-sm ms-1 fs-12" [routerLink]="['/appraisal_form']" [queryParams]="{ empcode:item.EMP_CODE,reqId:item.REQUEST_ID }">Appraisal Form</a>
                                                                         </h6>
                                                                     </div>
                                                                     <div class="col-lg-12">
@@ -250,7 +250,7 @@
                                                    </div>
                                                    <div>
                                                     <select class="form-select font-type fs-12 textbox-15 h-30" name="teamstatus" [(ngModel)]="teamstatus" (change)="Fetch_EmpGoalRequestsLM()">
-                                                        <option value="-1">Status</option>
+                                                        <option value="-1">All Status</option>
                                                         <option *ngFor="let combo of statusdata" value="{{combo.KEY_ID}}" [selected]="combo.KEY_ID == 0">{{combo.DATA_VALUE}}</option>                                                            
                                                     </select>
                                                    </div>
@@ -564,7 +564,7 @@
                               </div>
                               <div class="col-md-12 col-lg-5">
                                 <h6 class="fs-12 font-type">Employee<span class="ms-1">:</span></h6>
-                                <h6 class="fs-12 font-type fw-semibold">{{empcode}}</h6>
+                                <h6 class="fs-12 font-type fw-semibold">{{emname}}</h6>
                               </div>
                               <div class="col-md-12 col-lg-5">
                                 <h6 class="fs-12 font-type">Employee Title<span class="ms-1">:</span></h6>
