--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,6 @@
 
-<div class="auth-page-wrapper pt-5" style="background-image: url('assets/images/banner.png'); width: 100%;max-width: 100%;  background-position: center; background-repeat: no-repeat; background-size: cover;"> 
+<div class="auth-page-wrapper " > 
+    <div class="auth-one-bg-position auth-one-bg" id="auth-particles">
     <!-- auth page bg -->
     
         <div class="bg-overlay"></div>
@@ -7,25 +8,21 @@
     <!-- auth page content -->
     <div class="auth-page-content">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="text-center mt-sm-5 text-white-50">
-                        <div>
-                            <a href="index.html" class="d-inline-block auth-logo">
-                                <img src="assets\styles\img\logo_latest-removebg-preview.png" alt="" Height="100px" Width="250px">
-                            </a>
-                        </div>
-        
-                    </div>
-                </div>
-            </div>
+
             <!-- end row -->
 
-            <div class="row justify-content-center">
-                <div class="col-md-8 col-lg-6 col-xl-5">
-                    <div class="card mt-4"[hidden]="showreset">
-
-                        <div class="card-body p-4">
+            <div class="row justify-content-center pb-0">
+                <div class="col-md-12 col-lg-5 col-12 col-sm-12">
+                    <div class="card pb-0 card-animate shadow-lg"[hidden]="showreset" style="margin-top: 80px;">
+                        <div class="text-center mt-sm-5 text-white-50">
+                            <div>
+                                <a href="index.html" class="d-inline-block auth-logo">
+                                    <img src="assets\styles\img\logo_latest-removebg-preview.png" alt="" Height="100px" Width="250px">
+                                </a>
+                            </div>
+            
+                        </div>
+                        <div class="card-body p-4 pb-3">
                             <div class="text-center mt-2">
                                 <h5 class="text-primary">LOG IN</h5>                               
                             </div>
@@ -67,12 +64,16 @@
                                     <!-- </div> -->
 
                                     <div class="mt-4">
-                                        <button class="btn btn-primary w-100" type="submit" tabindex="3"(click)="onSubmit()" [disabled]="disablesubmit">Sign In</button>
+                                        <button class="btn btn-info w-100" type="submit" tabindex="3"(click)="onSubmit()" [disabled]="disablesubmit">Sign In</button>
                                     </div>
 
                                   
                                 </form>
                                 
+                            </div>
+                            <div class="text-center">
+                                <p class="mb-0 text-muted">&copy;
+                                    <script>document.write(new Date().getFullYear())</script> Emisoft.
                             </div>
                         </div>
                      
@@ -81,7 +82,7 @@
 
                     <!-- Reset password -->
 
-                    <div class="card mt-4" *ngIf="showreset">
+                    <div class="card" *ngIf="showreset"style="margin-top: 80px;">
 
                         <div class="card-body p-4">
                             <div class="text-center mt-2">
@@ -127,7 +128,7 @@
                                             </div>
 
                                     <div class="mt-4">
-                                        <button class="btn btn-primary" style="margin-left:110px;width:80px" type="submit" tabindex="3" >Save</button>
+                                        <button class="btn btn-info" style="margin-left:110px;width:80px" type="submit" tabindex="3" >Save</button>
                                         <button class="btn btn-danger" style="margin-left:10px;width:80px" type="button" tabindex="4" (click)="cancel()" >Cancel</button>
                                     </div>
 
@@ -158,7 +159,7 @@
                                             </div>
 
                                     <div class="mt-4">
-                                        <button class="btn btn-primary" style="margin-left:110px;width:80px" type="submit" tabindex="3" >Save</button>
+                                        <button class="btn btn-info" style="margin-left:110px;width:80px" type="submit" tabindex="3" >Save</button>
                                         <button class="btn btn-danger" style="margin-left:10px;width:80px" type="button" tabindex="4" (click)="cancel()" >Cancel</button>
                                     </div>
 
@@ -174,19 +175,7 @@
                     
                     
                 </div>
-                <footer class="footer">
-                    <div class="container" style="margin-top:-30px;">
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <div class="text-center">
-                                    <p class="mb-0 text-muted">&copy;
-                                        <script>document.write(new Date().getFullYear())</script> Emisoft.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </footer>
-              
+               
             </div>
             <!-- end row -->
         </div>
